package com.dungeondevs.components;

import com.artemis.Component;

public class DirectionComponent extends Component {
    public String direction;
}
